# seminal-input-final

./: .envrc  .gitignore  CMakeLists.txt  LICENSE  README.md  inline_run.sh
examples/: example1-1.c  example2-1.c  example2-2.c  fopen_example.c  fptrs.c
include/: FindIOVals.h  FindKeyPoints.h  SeminalInput.h  utils.h
lib/: CMakeLists.txt  FindIOVals.cpp  FindKeyPoints.cpp  SeminalInput.cpp  utils.cpp
scripts/: build_clang.sh  build_llvm.sh  util.sh
